# tooldev

./: README.md  pyproject.toml
tooldev/: __init__.py  cli_utils.py  directory_utils.py  namespace_utils.py  shell_commands.py
tooldev/commands/: lsp_command.py  pwp_command.py  root_command.py  shell_command.py
